--- a/src/components/banner/banner.component.pug
+++ b/src/components/banner/banner.component.pug
@@ -9,10 +9,10 @@ section.banner
                     span.block your car with RSCHIP
                 p.pageText AIncrease power, save fuel, create dyno charts, Measure acceleration and more
                 include ../socialIcons/socialIcons.component.pug
-            .bannerImgTwo
+            .bannerImgBg
                 picture 
-                    source(type="image/png" srcset="assets/images/png/imgBanner_1920.png" media="(min-width: 1441px)")
-                    source(type="image/png" srcset="assets/images/png/imgBanner_1440.png" media="(min-width: 1440px)")
-                    source(type="image/png" srcset="assets/images/png/imgBanner1-lg.png" media="(min-width: 992px)")
-                    source( type="image/png" srcset="assets/images/png/imgBanner1-md.png" media="(min-width: 768px)")
-                    img(src="assets/images/png/imgBanner1-xs.png", alt="imgBanner1-xs")
+                    source(type="image/png" srcset="assets/images/png/main/imgBannerBg_1920.png" media="(min-width: 1441px)")
+                    source(type="image/png" srcset="assets/images/png/main/imgBannerBg_1440.png" media="(min-width: 1440px)")
+                    source(type="image/png" srcset="assets/images/png/main/imgBannerBg_992.png" media="(min-width: 992px)")
+                    source( type="image/png" srcset="assets/images/png/main/imgBannerBg_768.png" media="(min-width: 768px)")
+                    img(src="assets/images/png/main/imgBannerBg_320.png", alt="imgBannerBg")
