--- a/src/components/banner/bannerRs.component.pug
+++ b/src/components/banner/bannerRs.component.pug
@@ -9,8 +9,19 @@ section.banner.bannerRs
                 p.pageText Better acceleration and sportier thotlle response for your Car
                 include ../socialIcons/socialIcons.component.pug
                 
-            .bannerImg
-                img(src="assets/images/png/imgBannerRsBg-Md.png", alt="imgBannerRs")
-                img.chip(src="assets/images/png/imgBannerRsChip-Md.png", alt="imgBannerRs")
+            .bannerImgBg
+                picture 
+                    source(type="image/png" srcset="assets/images/png/rs/imgBannerRsBg_1920.png" media="(min-width: 1441px)")
+                    source(type="image/png" srcset="assets/images/png/rs/imgBannerRsBg_1440.png" media="(min-width: 1440px)")
+                    source(type="image/png" srcset="assets/images/png/rs/imgBannerRsBg_1366.png" media="(min-width: 992px)")
+                    source( type="image/png" srcset="assets/images/png/rs/imgBannerRsBg_768.png" media="(min-width: 768px)")
+                    img(src="assets/images/png/rs/imgBannerRsBg_320.png", alt="imgBannerRs")
+            .bannerImgChip
+                picture 
+                    source(type="image/png" srcset="assets/images/png/rs/imgBannerRsChipLg@1x.png 1x, assets/images/png/rs/imgBannerRsChipLg@2x.png 2x" media="(min-width: 992px)")
+                    source(type="image/png" srcset="assets/images/png/rs/imgBannerRsChipSm@1x.png 1x, assets/images/png/rs/imgBannerRsChipSm@2x.png 2x" media="(min-width: 768px)")
+                    img(src="assets/images/png/rs/imgBannerRsChipXs@1x.png" srcset="assets/images/png/rs/imgBannerRsChipXs@2x.png 2x" alt="imgBannerRsChipXs")
+                
+                //- object(type="image/svg+xml" data="assets/images/png/rs/imgBannerRsChipLg.svg" )  Your browser does not support SVG
             .bannerSelect
                 include ../select/select.component.pug
