--- a/src/sass/base/base.sass
+++ b/src/sass/base/base.sass
@@ -14,6 +14,10 @@
 
 @font-face
   +font($SFUIDisplay, #{$SFUIDisplay}-Regular)
+  
+@font-face
+  +font(SFUIDisplay, SFUIDisplay-Heavy)
+
 @font-face
   +font($SFUIDisplay, #{$SFUIDisplay}-Bold)
 @font-face
