--- a/src/sass/blocks/page.sass
+++ b/src/sass/blocks/page.sass
@@ -12,8 +12,11 @@
     overflow: hidden
     &__title
         &-h1
+            font-family: SFUIDisplay-Heavy
             &_big
-                font-family: #{$SFUIDisplay}-Bold
+                // font-family: #{$SFUIDisplay}-Bold
+                font-family: SFUIDisplay-Heavy
+                
                 font-size: 64px
                 line-height: 100%
                 letter-spacing: 0.05em
