--- a/src/components/banner/banner.component.sass
+++ b/src/components/banner/banner.component.sass
@@ -3,6 +3,13 @@
     position: relative
     // overflow: hidden
     // max-height: 768px
+    padding-bottom: 75%
+    +sm-block
+        padding-bottom: 0
+    +md-block
+        padding-bottom: 0
+    +lg-block
+        padding-bottom: 0
     &.bannerGtr
 
         .bannerText
@@ -48,9 +55,14 @@
             
     &.bannerRs
         .page__title-h1
-            padding-left: 4%
+            padding-left: 3%
+
+        .pageText
+            padding-left: 3%
+
         .bannerText
             padding-top: 94px
+            
         .bannerImgBg
             +md-block
                 left: 33%
@@ -61,50 +73,68 @@
     .page__title-h1
 
         margin-top: 46px
-        width: 85%
         padding-left: 1%
         +sm-block
-            margin-top: 28px
-            width: 78%
-        +md-block
-            width: 100%
-        +lg-block
-            width: 100%
+            margin-top: 105px
 
         &_big
-            // +shift-md-right(-12)
-            // +shift-lg-right(-12)
+            +sm-block
+                top: 177px
+            +md-block
+                top: 115px
+            +lg-block
+                top: 115px
+            
         span.block
             display: block
             color: #fff
 
     .pageText
-        width: 50%
+     
         margin-top: 26px
         padding-right: 15px
-        margin-bottom: 58px
-
+        margin-bottom: 33px
+        padding-left: 1%
         +sm-block
-            margin-bottom: 64px
+            margin-bottom: 58px
+        +md-block
+           width: 50%
+        +lg-block
+           width: 50%
+
 
     .socialIcons
-        position: absolute
+        display: none
         width: 155px
         margin-bottom: 54px
         +sm-block
-            margin-bottom: 66px
+            margin-bottom: 55px
         +md-block
+            display: flex
             margin-bottom: 0
-            // position: absolute
+            position: absolute
             bottom: 70px
         +lg-block
+            display: flex
             margin-bottom: 0
-            // position: absolute
+            position: absolute
             bottom: 70px
 
 .bannerFlexContainer
-    +row-flex()
+    display: flex
+    flex-wrap: wrap
     position: relative
+    margin-left: -20px
+    margin-right: -20px
+    +sm-block
+        margin-left: -30px
+        margin-right: -30px
+    +md-block
+        margin-left: -25px
+        margin-right: -25px
+    +lg-block
+        margin-left: -25px
+        margin-right: -25px
     // align-items: center
 
 .bannerText
@@ -121,7 +151,9 @@
     padding-top: 75px
 
     +sm-block
-        padding-left: 63px
+        padding-top: 12px
+        padding-left: 50px
+        
     +md-block
         padding-left: 0
         height: 768px
@@ -147,23 +179,50 @@
 
     picture
         display: flex
+        width: 100%
+    img
+        width: 100%
+        +md-block
+            width: auto
+        +lg-block
+            width: auto
 .bannerImgChip
 
     position: absolute
-    top: 56%
-    right: 28%
-        
+    width: 100%
+    top: 65%
+    right: 0
+
+    picture
+        display: flex
+        width: 100%
+        justify-content: center
+
+    +sm-block
+        top: 61%
 
     +md-block
         right: -10px
         top: 135px
+        width: auto
     +lg-block
         right: -10px
         top: 135px
+        width: auto
 
 .bannerSelect
     position: absolute
     z-index: 3
+
+    top: 95%
+    left: 50%
     transform: translateX(-50%)
-    left: 52%
-    bottom: 33px
+
+    +sm-block
+        top: 82%
+    +md-block
+        top: 58%
+        left: 52%
+    +lg-block
+        top: 58%
+        left: 52%
